--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="/ảnh/IMG_0955.PNG" alt="hoanganh">
+        <img draggable="false" class="tilt" src="./assets/images/profile2.jpg" alt="hoanganh">
     </div>
     <div class="content">
         <h3>Nguyễn Hoàng Anh</h3>
@@ -317,4 +317,5 @@
 
 </body>
 </html>
+
 
